# SimpleRTOS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: workflow.yml
catos/: CMakeLists.txt
catos/component/: cat_component.c
catos/component/cat_shell/: cat_shell.c  cat_shell.h  cat_shell_cmds.c  cat_shell_port.c
catos/component/meoo/: meoo.c  meoo.h
catos/include/: cat_ansi_code.h  cat_assert.h  cat_device.h  cat_intr.h  cat_ipc.h  cat_lib.h  cat_log.h  cat_mem.h  cat_stdio.h  cat_task.h  catos.h  catos_config_template.h  catos_types.h  port.h
catos/src/: cat_device.c  cat_idle.c  cat_init.c  cat_intr.c  cat_ipc.c  cat_lib.c  cat_log.c  cat_mem.c  cat_stdio.c  cat_task.c
catos/test/tests/: cat_func_test.h  tests_config.h
catos/test/tests/intr_test/: tick_overflow_test.c
catos/test/tests/ipc_test/: basic_ipc_test.c  msg_queue_test.c  mutex_prio_reverse_test.c  mutex_test.c  sem_test.c
catos/test/tests/lib_test/: dlist_test.c  list_test.c
catos/test/tests/mem_test/: mem_test.c
catos/test/unit_test/: CMakeLists.txt  buildtest.bat  cat_ipc_test.cpp  cat_test.h  cleantest.bat  func.c  link.ld
catos/test/unit_test/stubs/: port_stub.c  port_stub.h  uart_stub.c
cmake/: 3rd.cmake  add_header.cmake  clang.cmake  compile_config.cmake  config_parse.cmake  functions.cmake  project_config.cmake  x86_64-riscv64-gcc.cmake  x86_64-x86_64-gcc.cmake
cmake/target_arch/cortex_m3/: cortex_m3.cmake
cmake/target_arch/win64/: win64.cmake
cmake/toolchain/: gcc-arm-none-eabi.cmake  mingw_x64.cmake
doc/: 0_工具链.md  1_系统启动.md  CMakeLists.txt  docker.md  代码提交规范.md
doc/杂项/: 进度备忘.md
notes/: note.md
port/port_cortex_m3/: arch_cm3_hw_c.c  arch_cm3_stack.c  arch_cm3_start.s
port/port_template/: CMakeLists.txt  arch_xx_hw_c.c  arch_xx_stack.c
projects/blink_with_cube/: CMakeLists.txt
projects/blink_with_cube/include/: catos_config.h
projects/blink_with_cube/src/cubemx_project/: .mxproject  cubemx_project.ioc
projects/blink_with_cube/src/cubemx_project/MDK-ARM/: cubemx_project.uvguix.mio  cubemx_project.uvoptx  cubemx_project.uvprojx
projects/blink_with_cube/src/port_cortex_m3/: arch_cm3_hw_s_gnu.s  arch_cm3_stack.c  readme.md
projects/blink_with_reg/: CMakeLists.txt  blink_with_reg.ld
projects/blink_with_reg/include/: catos_config.h  main.h
projects/blink_with_reg/src/: main.c
projects/blink_with_reg/src/port_cortex_m3/: CMakeLists.txt
projects/project_template/: CMakeLists-cubemx.txt  CMakeLists-empty.txt  user.cmake
projects/project_template/include/: catos_config.h
scripts/: build.bat  build_tests.bat  clean.bat  clean_all.bat  flash.bat  gdb_start.bat  ocd_start.bat
test/: CMakeLists.txt
test/integration_test/: CMakeLists.txt  example.cpp
test/system_test/: CMakeLists.txt
test/system_test/gnu_efi_test/: CMakeLists.txt  boot.cpp  main.cpp
test/system_test/opensbi_test/: CMakeLists.txt  boot.cpp
test/unit_test/: CMakeLists.txt  example.cpp
tools/: cppcheck-suppressions.xml  project_config.h.in
workspace/: Makefile  Makefile_content  debug_start.sh  openocd_start.sh
workspace/catOS/: Makefile
workspace/catOS/bsp/Libraries/: Makefile
workspace/catOS/bsp/Libraries/STM32F1xx_HAL_Driver/: Makefile  stm32f1xx_it.c  system_stm32f1xx.c
workspace/catOS/bsp/arch/: Makefile
workspace/catOS/bsp/arch/cortex_m3/: Makefile
workspace/catOS/bsp/interface/: port.h
workspace/catOS/bsp/interface/drivers/: cat_delay.h  cat_pin.h
workspace/catOS/bsp/lm3s6965evb/: Makefile
workspace/catOS/bsp/qemu_p103/: Makefile
workspace/catOS/include/: catos.h  catos_config.h  catos_config_template.h  catos_types.h
workspace/catOS/src/: Makefile
workspace/catOS/src/component/: Makefile
workspace/catOS/src/core/: Makefile
workspace/catOS/test/: Makefile  test_cat_string.c
workspace/project_configs/demo/: demo.config
workspace/project_configs/keil_c8t6_gnu_demo/: keil_c8t6_gnu_demo.uvguix.64813  keil_c8t6_gnu_demo.uvoptx  keil_c8t6_gnu_demo.uvprojx
workspace/projects/: Makefile
workspace/projects/common_configs/: common_configs.mk
workspace/projects/demo/: Makefile  demo.config  demo_c8t6.ld  demo_vet6.ld  include_paths.mk
workspace/projects/demo/user/: Makefile  catos_config.h  main.c
workspace/projects/demo_ra6m5_keil/keil_project/: 4.0.0  EBF_RA6M5.uvguix.mio  EBF_RA6M5.uvoptx  EBF_RA6M5.uvprojx  buildinfo.gpdsc  configuration.xml  ra_cfg.txt
workspace/projects/demo_ra6m5_keil/user/: main.c
workspace/projects/demo_vet6_keil/: demo_vet6_keil.sct
workspace/projects/demo_vet6_keil/keil_proj/: catos_start.d  demo_vet6_keil.build_log.htm  demo_vet6_keil.elf  demo_vet6_keil.lnp  demo_vet6_keil.map  demo_vet6_keil.uvguix.mio  demo_vet6_keil.uvoptx  demo_vet6_keil.uvprojx  demo_vet6_keil_Target 1.dep  drv_mpu6050.d  main.d  port_asm.d  stm32f1xx_it.d  system_stm32f1xx.d  usr_hmc.d
workspace/projects/demo_vet6_keil/user/: catos_config.h  main.c
workspace/projects/demo_vet6_keil_gnu/keil_proj/: cat_basic_task.d  cat_bitmap.d  cat_device.d  cat_drv_pin.d  cat_drv_uart.d  cat_idle.d  cat_init.d  cat_intr.d  cat_list.d  cat_shell.d  cat_shell_cmds.d  cat_shell_port.d  cat_sp_task.d  cat_stdio.d  cat_string.d  catos_start.d  contex.d  cpu_port.d  demo_vet6_keil.uvguix.mio  demo_vet6_keil.uvoptx  demo_vet6_keil.uvprojx  demo_vet6_keil_Target 1.dep  demo_vet6_keil_gnu.build_log.htm  demo_vet6_keil_gnu.elf  demo_vet6_keil_gnu.lnp  demo_vet6_keil_gnu.map  main.d  mem_rw.d  port.d  stm32f1xx_hal.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_uart.d  system_stm32f1xx.d  test_cat_string.d
workspace/projects/demo_vet6_keil_gnu/user/: Makefile  main.c  main_bak.c
workspace/projects/project_templete/: readme.md  template.config
workspace/tools/: debug_start.sh  flash.sh  openocd_start.sh
workspace/user/: main.c
workspace/user/bsp/board_led/: bsp_board_led.h
workspace/user/bsp/iic/: bsp_iic.c  bsp_iic.h
workspace/user/bsp/key/: key.c
workspace/user/bsp/lcd/: oled.c
(+200 files in other folders)
